--- a/my.catalog/res/layout/item.xml
+++ b/my.catalog/res/layout/item.xml
@@ -21,4 +21,12 @@
         android:layout_centerHorizontal="true"
         android:text="TextView" />
 
+    <ImageView
+        android:id="@+id/imageView1"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_centerHorizontal="true"
+        android:layout_centerVertical="true"
+        android:src="@drawable/ic_launcher" />
+
 </RelativeLayout>
