--- a/my.catalog/res/layout/category_list.xml
+++ b/my.catalog/res/layout/category_list.xml
@@ -8,6 +8,8 @@
         android:id="@android:id/list"
         android:layout_width="fill_parent"
         android:layout_height="wrap_content"
-        android:dividerHeight="1dp" />
+        android:divider="#b5b5b5"
+        android:dividerHeight="1dp"
+        android:listSelector="@drawable/list_selector" />
 
 </LinearLayout>
