--- a/my.catalog/res/layout/catalog_activity.xml
+++ b/my.catalog/res/layout/catalog_activity.xml
@@ -7,7 +7,6 @@
     <ListView
         android:id="@android:id/list"
         android:layout_width="fill_parent"
-        android:layout_height="wrap_content"
-        android:dividerHeight="1dp" />
+        android:layout_height="wrap_content"/>
 
 </LinearLayout>
