--- a/my.catalog/res/layout/category_list.xml
+++ b/my.catalog/res/layout/category_list.xml
@@ -7,9 +7,6 @@
     <ListView
         android:id="@android:id/list"
         android:layout_width="fill_parent"
-        android:layout_height="wrap_content"
-        android:divider="#b5b5b5"
-        android:dividerHeight="1dp"
-        android:listSelector="@drawable/list_selector" />
+        android:layout_height="wrap_content" />
 
 </LinearLayout>
