--- a/my.catalog/res/layout/splash_screen.xml
+++ b/my.catalog/res/layout/splash_screen.xml
@@ -18,16 +18,34 @@
             android:src="@drawable/ic_launcher" />
     </LinearLayout>
 
-    <LinearLayout
+    <RelativeLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:orientation="vertical"
-        android:layout_marginBottom="10dp" >
+        android:fadingEdge="horizontal" >
 
-        <Gallery
-            android:id="@+id/gallery1"
+        <TextView
+            android:id="@+id/textView1"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_centerHorizontal="true"
+            android:text="Medium Text"
+            android:paddingBottom="15dp"
+            android:textAppearance="?android:attr/textAppearanceMedium" />
+
+        <LinearLayout
             android:layout_width="match_parent"
-            android:layout_height="wrap_content" />
-    </LinearLayout>
+            android:layout_height="wrap_content"
+            android:orientation="vertical"
+            android:layout_marginTop="30dp"
+            android:layout_below="@+id/textView1"
+            android:paddingBottom="5dp">
+
+            <Gallery
+                android:id="@+id/gallery1"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:gravity="fill" />
+        </LinearLayout>
+    </RelativeLayout>
 
 </LinearLayout>
