--- a/my.catalog/res/menu/main.xml
+++ b/my.catalog/res/menu/main.xml
@@ -2,9 +2,14 @@
 
     <item
         android:id="@+id/action_navigate"
-        android:orderInCategory="1"
         android:icon="@drawable/device_access_storage"
-        android:title="@string/catalog_map"
-        android:showAsAction="ifRoom"/>
+        android:orderInCategory="1"
+        android:showAsAction="ifRoom"
+        android:title="@string/catalog_map"/>
+    <item
+        android:id="@+id/update_catalog"
+        android:orderInCategory="2"
+        android:showAsAction="never"
+        android:title="@string/update_catalog"/>
 
 </menu>
