--- a/my.catalog/res/menu/main.xml
+++ b/my.catalog/res/menu/main.xml
@@ -11,5 +11,10 @@
         android:orderInCategory="2"
         android:showAsAction="never"
         android:title="@string/update_catalog"/>
+    <item
+        android:id="@+id/use_old_catalog"
+        android:orderInCategory="3"
+        android:showAsAction="never"
+        android:title="@string/use_old_catalog"/>
 
 </menu>
