--- a/my.catalog/res/layout/item.xml
+++ b/my.catalog/res/layout/item.xml
@@ -10,14 +10,14 @@
 
         <RelativeLayout
             android:layout_width="fill_parent"
-            android:layout_height="wrap_content" >
+            android:layout_height="wrap_content"
+            android:padding="10dp" >
 
             <ImageView
                 android:id="@+id/imageView1"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_centerHorizontal="true"
-                android:layout_marginTop="30dp"
                 android:src="@drawable/ic_launcher" />
 
             <TextView
